src/test/deca/codegen/invalid/invalid_float_format_debordement.deca
// Test parser, invalid float format avec debordement

{
    float x = 3.4028235e38f * 2;
}